remove usage of rxjava - #153 use of java8 Stream - #153